// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoGrid renders with title prop 1`] = `
<Fragment>
  <videoGridHeader
    title="Trending"
  />
  <div
    className="video-grid"
  >
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
  </div>
  <Divider />
</Fragment>
`;

exports[`VideoGrid renders without divider 1`] = `
<Fragment>
  <videoGridHeader />
  <div
    className="video-grid"
  >
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
  </div>
</Fragment>
`;

exports[`VideoGrid renders without props 1`] = `
<Fragment>
  <videoGridHeader />
  <div
    className="video-grid"
  >
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
    <videoPreview />
  </div>
  <Divider />
</Fragment>
`;
